--- a/hangman_v3.html
+++ b/hangman_v3.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./hangman_v3.css">
 </head>
 <body>
     <div>
-        <div id="etiqueta-1"></div>
-        <div id="etiqueta-2"></div>
-        <div id="etiqueta-3"></div>
-        <div id="etiqueta-4"></div>
-        <div id="etiqueta-5"></div>
+        <div id="etiqueta-1" class="etiqueta"></div>
+        <div id="etiqueta-2" class="etiqueta"></div>
+        <div id="etiqueta-3" class="etiqueta"></div>
+        <div id="etiqueta-4" class="etiqueta"></div>
+        <div id="etiqueta-5" class="etiqueta"></div>
     </div>
+    <div id="container-game"></div>
+    <div id="notification" class="notification"></div>
 </body>
+<script src="./hangman_v3.js"></script>
 </html>
